--- a/package.json
+++ b/package.json
@@ -15,5 +15,7 @@
     "react-dom": "^18.3.1",
     "recharts": "^2.10.4",
     "tailwindcss": "^3.4.9"
-  }
+    "typescript": "^5.4.0",
+    "@types/react": "^18.3.0",
+    "@types/node": "^20.12.0"
 }
