--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "start": "next start"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.18",
-    "next": "^14.2.5",
-    "papaparse": "^5.4.1",
-    "postcss": "^8.4.33",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "recharts": "^2.10.4",
-    "tailwindcss": "^3.4.9"
-    "typescript": "^5.4.0",
-    "@types/react": "^18.3.0",
-    "@types/node": "^20.12.0"
+    "autoprefixer": "10.4.18",
+    "next": "14.2.5",
+    "papaparse": "5.4.1",
+    "postcss": "8.4.33",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "recharts": "2.10.4",
+    "tailwindcss": "3.4.9"
+  },
+  "devDependencies": {
+    "typescript": "5.4.0",
+    "@types/react": "18.3.0",
+    "@types/node": "20.12.0"
+  }
 }
