--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "tailwindcss": "3.4.9"
   },
   "devDependencies": {
-    "typescript": "5.4.0",
-    "@types/react": "18.3.0",
-    "@types/node": "20.12.0"
+    "typescript": "^5.5.4",
+    "@types/react": "^18.3.3",
+    "@types/node": "^20.12.12"
   }
 }
