--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "recharts": "2.10.4",
-    "tailwindcss": "3.4.9"
+    "tailwindcss": "3.4.9",
+    "stripe": "^16.6.0"
   },
   "devDependencies": {
     "typescript": "^5.5.4",
