--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "18.3.1",
     "recharts": "2.10.4",
     "tailwindcss": "3.4.9",
-    "stripe": "^16.6.0"
+    "stripe": "^16.6.0",
     "resend": "^3.2.0"
   },
   "devDependencies": {
