--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "next": "14.2.5",
     "papaparse": "5.4.1",
     "postcss": "8.4.33",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "recharts": "2.10.4",
     "tailwindcss": "3.4.9",
     "stripe": "^16.6.0",
     "resend": "^3.2.0"
+    "@stripe/stripe.js": "^2.4.0
   },
   "devDependencies": {
     "typescript": "^5.5.4",
