--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "recharts": "2.10.4",
     "tailwindcss": "3.4.9",
     "stripe": "^16.6.0",
-    "resend": "^3.2.0",
-    "@stripe/stripe.js": "^2.4.0"
+    "resend": "^3.2.0"
   },
   "devDependencies": {
     "typescript": "^5.5.4",
