--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "recharts": "2.10.4",
     "tailwindcss": "3.4.9",
     "stripe": "^14.25.0",
-    "resend": "^3.2.0"
+    "resend": "^3.2.0",
+    "googleapis": "^133.0.0"
   },
   "devDependencies": {
     "typescript": "^5.5.4",
