--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "tailwindcss": "3.4.9",
     "stripe": "^14.25.0",
     "resend": "^3.2.0",
-    "googleapis": "^133.0.0"
+    "googleapis": "^133.0.0",
+    "@vercel/blob": "^0.23.2"
   },
   "devDependencies": {
     "typescript": "^5.5.4",
